# microservice-demo-paper-catalog

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: circuit_breaker.py  config.py  database.py  kafka_consumer.py  main.py  metrics.py  schemas.py  submission_client.py
