[project]
name = "paper-catalog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.13.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.3",
    "httpx>=0.28.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
]
